Mixins, extends y SEO

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="PASTAS, PASTA, PASTA CASERA, GLUTEN FREE, COMIDA CASERA, POSTRES, POSTRES CASEROS">
+    <meta name="description" 
+    content="Cuéntanos tu experiencia con nuestros productos, valóranos y déjanos tus sugerencias">
     <title>Contacto</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -46,19 +49,18 @@
         <h2 class="tituloCentrado textoPaddingBottom animate__animated animate__fadeIn">Contacto</h2>
         <main class="cajaEstrellas">
             <section>
-                <h3>Porque para nosotros lo más importante son nuestros clientes, te invitamos a que nos dejes tu valoración
-                </h3>
+                <h3>Porque para nosotros lo más importante son nuestros clientes, te invitamos a que nos dejes tu valoración</h3>
                 <div class="estrellas">
                     <input id="estrellaUno" type="radio" name="valoracion" value="5">
-                    <label for="estrellaUno"></label>
+                    <label for="estrellaUno">★</label>
                     <input id="estrellaDos" type="radio" name="valoracion" value="4">
-                    <label for="estrellaDos"></label>
+                    <label for="estrellaDos">★</label>
                     <input id="estrellaTres" type="radio" name="valoracion" value="3">
-                    <label for="estrellaTres"></label>
+                    <label for="estrellaTres">★</label>
                     <input id="estrellaCuatro" type="radio" name="valoracion" value="2">
-                    <label for="estrellaCuatro"></label>
+                    <label for="estrellaCuatro">★</label>
                     <input id="estrellaCinco" type="radio" name="valoracion" value="1">
-                    <label for="estrellaCinco"></label>
+                    <label for="estrellaCinco">★</label>
                 </div>
                 <form action="" method="post">
                     <input type="text" name="nombreValoracion" id="txtNombreValoracion" placeholder="Ingrese su nombre"
@@ -85,15 +87,15 @@
                         <p>Una delicia!</p> 
                         <div class="estrellasDeshabilitadas">
                             <input id="unoEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaUno">★</label>
                             <input id="unoEstrellaDos" type="checkbox" name="valoracion" value="4" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaDos">★</label>
                             <input id="unoEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaTres">★</label>
                             <input id="unoEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCuatro">★</label>
                             <input id="unoEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="unoEstrellaCinco">★</label>
                         </div>
                     </li>
                     <li>
@@ -101,15 +103,15 @@
                         <p>Los raviolones integrales son lo más</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="dosEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaUno">★</label>
                             <input id="dosEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaDos">★</label>
                             <input id="dosEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaTres">★</label>
                             <input id="dosEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCuatro">★</label>
                             <input id="dosEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCinco"><!--★--></label>                        
+                            <label class="animate__animated animate__fadeInRight" for="dosEstrellaCinco">★</label>                        
                         </div>
                     </li>
                     <li>
@@ -117,15 +119,15 @@
                         <p>Los sorrentinos van mejor con bolognesa</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="tresEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaUno">★</label>
                             <input id="tresEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaDos">★</label>
                             <input id="tresEstrellaTres" type="checkbox" name="valoracion" value="3" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaTres">★</label>
                             <input id="tresEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCuatro">★</label>
                             <input id="tresEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="tresEstrellaCinco">★</label>
                         </div>
                     </li>
                     <li>
@@ -133,31 +135,31 @@
                         <p>Todo muy rico, la atención de los chicos es excelente</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="cuatroEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaUno">★</label>
                             <input id="cuatroEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaDos">★</label>
                             <input id="cuatroEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaTres">★</label>
                             <input id="cuatroEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCuatro">★</label>
                             <input id="cuatroEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCinco">★</label>
                         </div>
                     </li>
                     <li>
                         <p class="nombreCliente">Antonio</p>
                         <p>Para los que nos gusta la pasta disfrutamos</p>
                         <div class="estrellasDeshabilitadas">
-                            <input id="cuatroEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaUno"><!--★--></label>
-                            <input id="cuatroEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaDos"><!--★--></label>
-                            <input id="cuatroEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaTres"><!--★--></label>
-                            <input id="cuatroEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCuatro"><!--★--></label>
-                            <input id="cuatroEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="cuatroEstrellaCinco"><!--★--></label>
+                            <input id="cincoEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
+                            <label class="animate__animated animate__fadeInRight" for="cincoEstrellaUno">★</label>
+                            <input id="cincoEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
+                            <label class="animate__animated animate__fadeInRight" for="cincoEstrellaDos">★</label>
+                            <input id="cincoEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
+                            <label class="animate__animated animate__fadeInRight" for="cincoEstrellaTres">★</label>
+                            <input id="cincoEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
+                            <label class="animate__animated animate__fadeInRight" for="cincoEstrellaCuatro">★</label>
+                            <input id="cincoEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
+                            <label class="animate__animated animate__fadeInRight" for="cincoEstrellaCinco">★</label>
                         </div>
                     </li>
                     <li>
@@ -165,15 +167,15 @@
                         <p>Muy rico todo, los tallarines y el lemon pie. La mejor onda los chicos!</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="siesEstrellaUno" type="checkbox" name="valoracion" value="5" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaUno">★</label>
                             <input id="siesEstrellaDos" type="checkbox" name="valoracion" value="4" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaDos">★</label>
                             <input id="siesEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaTres">★</label>
                             <input id="siesEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCuatro">★</label>
                             <input id="siesEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="siesEstrellaCinco">★</label>
                         </div>
                     </li>
                     <li>
@@ -181,15 +183,15 @@
                         <p>Buen producto, entregaron en tiempo y forma</p>
                         <div class="estrellasDeshabilitadas">
                             <input id="sieteEstrellaUno" type="checkbox" name="valoracion" value="5" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaUno"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaUno">★</label>
                             <input id="sieteEstrellaDos" type="checkbox" name="valoracion" value="4" disabled checked>
-                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaDos"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaDos">★</label>
                             <input id="sieteEstrellaTres" type="checkbox" name="valoracion" value="3" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaTres"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaTres">★</label>
                             <input id="sieteEstrellaCuatro" type="checkbox" name="valoracion" value="2" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCuatro"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCuatro">★</label>
                             <input id="sieteEstrellaCinco" type="checkbox" name="valoracion" value="1" disabled>
-                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCinco"><!--★--></label>
+                            <label class="animate__animated animate__fadeInRight" for="sieteEstrellaCinco">★</label>
                         </div>
                     </li>
                 </ul>
@@ -210,7 +212,7 @@
                     </div>
                 </div>
             <div class="mapa">
-                <iframe
+                <iframe title="ubicacion"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1636.031497517659!2d-56.18178220770033!3d-34.90486859862373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81ca802aa74d%3A0x92096617942e53a0!2sCarlos%20Roxlo%201356%2C%2011200%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1636076987679!5m2!1ses-419!2suy"
                     loading="lazy"></iframe>
             </div>
