--- a/paginas/pastas.html
+++ b/paginas/pastas.html
@@ -1,9 +1,12 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="PASTAS, PASTA, PASTA CASERA, GLUTEN FREE, COMIDA CASERA, POSTRES, POSTRES CASEROS">
+    <meta name="description" 
+    content="Pastas ricas y frescas directamente a tu hogar; ahora también aptas para celíacos">
     <title>Pastas</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
