--- a/paginas/pastas.html
+++ b/paginas/pastas.html
@@ -20,7 +20,7 @@
             <div>
                 <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <h1>Pastas Trivelli's</h1>
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid justify-content-end">
@@ -74,8 +74,8 @@
             </article>
             <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
-                    <img src="../imagenes/tallarines.png" alt="Tallarines">
-                    <h4>Tallarines</h4>
+                    <img src="../imagenes/tallarines_verdura.png" alt="Tallarines">
+                    <h4>Tallarines de verdura</h4>
                     <p>Mejor acompañado con: Salsa Pannarossa</p>
                 </a>
             </article>
