--- a/paginas/postres.html
+++ b/paginas/postres.html
@@ -20,7 +20,7 @@
             <div>
                 <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <h1>Pastas Trivelli's</h1>
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid justify-content-end">
@@ -105,7 +105,7 @@
             <article class="recomendado" data-aos="zoom-in" data-aos-duration="1000">
                 <a href="">
                     <img src="../imagenes/torta_manzana.png" alt="Torta de manzana, pasas y nueces">
-                    <h4>Torta de manzana, pasas y nueces</h4>
+                    <h4>Torta de manzana</h4>
                     <p>Aproximadamente 1,5kg</p>
                 </a>
             </article>
