--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -20,7 +20,7 @@
             <div>
                 <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <h1>Pastas Trivelli's</h1>
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid justify-content-end">
