--- a/index.html
+++ b/index.html
@@ -1,112 +1,57 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="PASTAS, PASTA, PASTA CASERA, GLUTEN FREE, COMIDA CASERA, POSTRES, POSTRES CASEROS">
-    <meta name="description" 
-    content="Te ofrecemos las mejores pastas y postres caseros, ricos y naturales, producidos a diario y con la mejor calidad">
-    <title>Pastas Trivelli's</title>
-    <link rel="icon" href="imagenes/favicon.png" type="image/png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <title>Proyecto Final</title>
     <link rel="stylesheet" href="css/estilosSass.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script src="variables.js" defer></script>
+    <script src="index.js" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
+    <!-- <header>
+        <a href="index.html">PASTAS TRIVELLI'S</a>
+    </header> -->
     <header>
         <div class="headerLogo">
             <div>
-                <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
+                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="index.html"><h1>Pastas Trivelli's</h1></a>
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="desplegable">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link-active" aria-current="page" href="paginas/pastas.html">Pastas</a>
+                            <a class="nav-link-active" aria-current="page" href="pastas.html">Pastas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link-active" href="paginas/postres.html">Postres</a>
+                            <a class="nav-link-active" href="postres.html">Postres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link-active" href="paginas/sobreNosotros.html">Sobre nosotros</a>
+                            <a class="nav-link-active" href="sobreNosotros.html">Sobre nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link-active" href="paginas/contacto.html">Contacto</a>
+                            <a class="nav-link-active" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
           </nav>
     </header>
-    <div class="contenedorCarrusel">
-        <div id="carrusel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner" >
-                <div class="carousel-item active">
-                    <img src="imagenes/slide_uno.png" class=" w-100" alt="Slide 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/slide_dos.png" class="w-100" alt="Slide 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/slide_tres.png" class=" w-100" alt="Slide 3">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carrusel" role="button" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carrusel" role="button" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </a>
-        </div>
-    </div>    
-    <section class="cuerpo">
-        <h2>Recomendados del día:</h2>
-        <div class="catalogo">
-            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado">
-                <a href="">
-                    <img src="imagenes/nioquis.png" alt="Ñoquis de papa">
-                    <h4>Ñoquis de papa</h4>
-                </a>
-            </article>
-            <article data-aos="flip-right" data-aos-duration="1500" class="recomendado">
-                <a href="">
-                    <img src="imagenes/sorrentinos_light.png" alt="Sorrentinos light">
-                    <h4>Sorrentinos light</h4>
-                </a>
-            </article>
-            <article data-aos="flip-left" data-aos-duration="1500" class="recomendado">
-                <a href="">
-                    <img src="imagenes/tallarines_verdura.png" alt="Tallarines de verdura">
-                    <h4>Tallarines de verdura</h4>
-                </a>
-            </article>
-            <article data-aos="flip-right" data-aos-duration="1500" class="recomendado">
-                <a href="">
-                    <img src="imagenes/rogel.png" alt="Torta Rogel">
-                    <h4>Torta Rogel</h4>
-                </a>
-            </article>
-        </div>
-    </section>
-    <section class="cuerpo">
-        <h2>Pedidos:</h2>
-        <p class="textoPaddingBottom">Puedes hacer tus pedidos de Lunes a Sábados de 10 a 18 hs. 
-            Encárganos tu pasta o postre antes de las 13 hs. para recibirlas en el día dentro de Montevideo</p>
-        <input class="boton" type="submit" value="Hacer Pedido">
-    </section>
-    <section class="cuerpo">
-        <h2>Nuestra galería de pastas</h2>
-        <p class="textoPaddingBottom">Nuestros productos más ricos, en imágenes!</p>
-        <input class="boton" type="submit" value="Ver galería">
+    <section class="titulo">
+        <p>PRODUCTOS</p>
+        <input id="botonCarrito" type="submit" value="VER CARRITO" class="boton-cambiar">
+    </section>       
+    <h1>Seleccione un producto para realizar su pedido</h1>
+    <section id="catalogo" class="catalogo">
     </section>
     <footer>
         <div class="slogan">
@@ -117,28 +62,24 @@
             <ul>
                 <li>
                     <a href="#" class="facebook">
-                        <img class="iconoFacebook" src="imagenes/facebook.png" alt="Facebook">
-                        <img class="iconoFacebook" src="imagenes/facebookHover.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebookHover.png" alt="Facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="instagram">
-                        <img class="iconoInstagram" src="imagenes/instagram.png" alt="Instagram">
-                        <img class="iconoInstagram" src="imagenes/instagramHover.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagramHover.png" alt="Instagram">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="youtube">
-                        <img class="iconoYoutube" src="imagenes/youtube.png" alt="YouTube">
-                        <img class="iconoYoutube" src="imagenes/youtubeHover.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtubeHover.png" alt="YouTube">
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>AOS.init();</script>
 </html>
