--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
+    <link rel="icon" href="../imagenes/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="variables.js" defer></script>
@@ -12,45 +13,23 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
-    <!-- <header>
-        <a href="index.html">PASTAS TRIVELLI'S</a>
-    </header> -->
     <header>
         <div class="headerLogo">
             <div>
                 <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#desplegable" aria-controls="desplegable" aria-expanded="false">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="desplegable">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link-active" aria-current="page" href="pastas.html">Pastas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link-active" href="postres.html">Postres</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link-active" href="sobreNosotros.html">Sobre nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link-active" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-          </nav>
+        <div>
+            <input id="botonCarrito" type="submit" value="VER CARRITO" class="boton-nav">
+        </div>
     </header>
     <section class="titulo">
-        <p>PRODUCTOS</p>
-        <input id="botonCarrito" type="submit" value="VER CARRITO" class="boton-cambiar">
-    </section>       
-    <h1>Seleccione un producto para realizar su pedido</h1>
+        <h1>PRODUCTOS</h1>
+    </section>
+    <div class="caja-subtitulo">
+        <h2>Seleccione un producto para realizar su pedido</h2>
+    </div>       
     <section id="catalogo" class="catalogo">
     </section>
     <footer>
