--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
-    <link rel="stylesheet" href="css/estilosSass.css">
+    <link rel="stylesheet" href="../css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="variables.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="../js/variables.js" defer></script>
+    <script src="../js/index.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header>
         <div class="headerLogo">
             <div>
-                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
+            <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
-        <div>
+        <div class="nav-menu">
             <input id="botonCarrito" type="submit" value="VER CARRITO" class="boton-nav">
+            <input id="botonPedidos" type="submit" value="VER PEDIDOS" class="boton-nav">
         </div>
     </header>
     <section class="titulo">
