--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
-    <link rel="stylesheet" href="css/estilosSass.css">
+    <link rel="stylesheet" href="../css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="variables.js" defer></script>
-    <script src="carrito.js" defer></script>
+    <script src="../js/variables.js" defer></script>
+    <script src="../js/carrito.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -17,11 +17,11 @@
     <header>
         <div class="headerLogo">
             <div>
-                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
+            <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
-        <div class="nav-carrito">
+        <div class="nav-menu">
             <input id="botonProductos" type="submit" value="SEGUIR COMPRANDO" class="boton-nav">
             <input id="botonPedidos" type="submit" value="VER PEDIDOS" class="boton-nav">
         </div>
