--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -31,7 +31,8 @@
     <div class="caja-subtitulo">
         <h2>Historial de pedidos</h2>
     </div>  
-    <section id="pedidos" class="pedidos">
+    <section class="pedidos">
+        <table id="tablaPedidos" class="tabla"></table>
     </section>
 </body>
 </html>
