--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -29,10 +29,39 @@
         <h1>PEDIDOS</h1>
     </section>
     <div class="caja-subtitulo">
-        <h2>Historial de pedidos</h2>
+        <h2 id="subtituloPedidos"></h2>
     </div>  
-    <section class="pedidos">
+    <section id="cajaCargador" class="caja-cargador"></section>
+    <section class="caja-tabla">
         <table id="tablaPedidos" class="tabla"></table>
     </section>
+    <footer>
+        <div class="slogan">
+            <h2>Pastas Trivelli's</h2>
+            <p>Generaciones haciendo pastas</p>
+        </div>
+        <div class="redes">
+            <ul>
+                <li>
+                    <a href="#" class="facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebookHover.png" alt="Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagramHover.png" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="youtube">
+                        <img class="iconoYoutube" src="../imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtubeHover.png" alt="YouTube">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
