--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -16,9 +16,9 @@
     <header>
         <div class="headerLogo">
             <div>
-                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
         <div class="nav-menu">
             <input id="botonProductos" type="submit" value="SEGUIR COMPRANDO" class="boton-nav">
