--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="../imagenes/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="../js/variables.js" defer></script>
-    <script src="../js/index.js" defer></script>
+    <script src="js/variables.js" defer></script>
+    <script src="js/index.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
