corrección listado de pedidos

--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -32,7 +32,7 @@
         <h2 id="subtitulo">Ingrese la cantidad para cada producto agregado y finalice su compra</h2>
         <input id="botonLimpiar" type="submit" value="VACIAR CARRITO" class="boton-limpiar">
     </div>  
-    <section class="caja-tabla">
+    <section id="caja-items" class="caja-pedidos">
         <table id="tablaCarrito" class="tabla"></table>
     </section>
     <section class="caja-boton-input">
