--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -28,12 +28,13 @@
     <section class="titulo">
         <h1>PEDIDOS</h1>
     </section>
+    <div id="caja-cargador" class="caja-cargador">
+        
+    </div>
     <div class="caja-subtitulo">
         <h2 id="subtituloPedidos"></h2>
-    </div>  
-    <section id="cajaCargador" class="caja-cargador"></section>
-    <section class="caja-tabla">
-        <table id="tablaPedidos" class="tabla"></table>
+    </div>
+    <section id="caja-pedidos"></section>
     </section>
     <footer>
         <div class="slogan">
