--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="headerLogo">
             <div>
-                <a href="index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
+                <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
             </div>
             <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
@@ -42,20 +42,20 @@
             <ul>
                 <li>
                     <a href="#" class="facebook">
-                        <img class="iconoFacebook" src="../imagenes/facebook.png" alt="Facebook">
-                        <img class="iconoFacebook" src="../imagenes/facebookHover.png" alt="Facebook">
+                        <img class="iconoFacebook" src="imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="imagenes/facebookHover.png" alt="Facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="instagram">
-                        <img class="iconoInstagram" src="../imagenes/instagram.png" alt="Instagram">
-                        <img class="iconoInstagram" src="../imagenes/instagramHover.png" alt="Instagram">
+                        <img class="iconoInstagram" src="imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="imagenes/instagramHover.png" alt="Instagram">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="youtube">
-                        <img class="iconoYoutube" src="../imagenes/youtube.png" alt="YouTube">
-                        <img class="iconoYoutube" src="../imagenes/youtubeHover.png" alt="YouTube">
+                        <img class="iconoYoutube" src="imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="imagenes/youtubeHover.png" alt="YouTube">
                     </a>
                 </li>
             </ul>
