--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
-    <link rel="icon" href="/imagenes/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/estilosSass.css">
+    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link rel="stylesheet" href="css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="/js/variables.js" defer></script>
-    <script src="/js/carrito.js" defer></script>
+    <script src="js/variables.js" defer></script>
+    <script src="js/carrito.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header>
         <div class="headerLogo">
             <div>
-                <a href="/index.html"><img src="/imagenes/logo.png" alt="Logo principal"></a>
+                <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="/index.html"><h1>Pastas Trivelli's</h1></a>       
+            <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
         <div class="nav-menu">
             <input id="botonProductos" type="submit" value="SEGUIR COMPRANDO" class="boton-nav">
@@ -55,20 +55,20 @@
             <ul>
                 <li>
                     <a href="#" class="facebook">
-                        <img class="iconoFacebook" src="/imagenes/facebook.png" alt="Facebook">
-                        <img class="iconoFacebook" src="/imagenes/facebookHover.png" alt="Facebook">
+                        <img class="iconoFacebook" src="imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="imagenes/facebookHover.png" alt="Facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="instagram">
-                        <img class="iconoInstagram" src="/imagenes/instagram.png" alt="Instagram">
-                        <img class="iconoInstagram" src="/imagenes/instagramHover.png" alt="Instagram">
+                        <img class="iconoInstagram" src="imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="imagenes/instagramHover.png" alt="Instagram">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="youtube">
-                        <img class="iconoYoutube" src="/imagenes/youtube.png" alt="YouTube">
-                        <img class="iconoYoutube" src="/imagenes/youtubeHover.png" alt="YouTube">
+                        <img class="iconoYoutube" src="imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="imagenes/youtubeHover.png" alt="YouTube">
                     </a>
                 </li>
             </ul>
