--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
     <link rel="icon" href="imagenes/favicon.png" type="image/png">
-    <link rel="stylesheet" href="css/estilosSass.css">
+    <link rel="stylesheet" href="../css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="js/variables.js" defer></script>
-    <script src="js/carrito.js" defer></script>
+    <script src="../js/variables.js" defer></script>
+    <script src="../js/carrito.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header>
         <div class="headerLogo">
             <div>
-                <a href="index.html"><img src="imagenes/logo.png" alt="Logo principal"></a>
+                <a href="../index.html"><img src="../imagenes/logo.png" alt="Logo principal"></a>
             </div>
-            <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
+            <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
         <div class="nav-menu">
-            <input id="botonProductos" type="submit" value="SEGUIR COMPRANDO" class="boton-nav">
-            <input id="botonPedidos" type="submit" value="VER PEDIDOS" class="boton-nav">
+            <a id="botonProductos" class="boton-nav" href="../index.html">SEGUIR COMPRANDO</a>
+            <a id="botonPedidos" class="boton-nav" href="/paginas/pedidos.html">VER PEDIDOS</a>
         </div>
     </header>
     <section class="titulo">
@@ -55,20 +55,20 @@
             <ul>
                 <li>
                     <a href="#" class="facebook">
-                        <img class="iconoFacebook" src="imagenes/facebook.png" alt="Facebook">
-                        <img class="iconoFacebook" src="imagenes/facebookHover.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebook.png" alt="Facebook">
+                        <img class="iconoFacebook" src="../imagenes/facebookHover.png" alt="Facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="instagram">
-                        <img class="iconoInstagram" src="imagenes/instagram.png" alt="Instagram">
-                        <img class="iconoInstagram" src="imagenes/instagramHover.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagram.png" alt="Instagram">
+                        <img class="iconoInstagram" src="../imagenes/instagramHover.png" alt="Instagram">
                     </a>
                 </li>
                 <li>
                     <a href="#" class="youtube">
-                        <img class="iconoYoutube" src="imagenes/youtube.png" alt="YouTube">
-                        <img class="iconoYoutube" src="imagenes/youtubeHover.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtube.png" alt="YouTube">
+                        <img class="iconoYoutube" src="../imagenes/youtubeHover.png" alt="YouTube">
                     </a>
                 </li>
             </ul>
