--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title>
-    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link rel="icon" href="..imagenes/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/estilosSass.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="../js/variables.js" defer></script>
@@ -22,7 +22,7 @@
         </div>
         <div class="nav-menu">
             <a id="botonProductos" class="boton-nav" href="../index.html">SEGUIR COMPRANDO</a>
-            <a id="botonPedidos" class="boton-nav" href="/paginas/pedidos.html">VER PEDIDOS</a>
+            <a id="botonPedidos" class="boton-nav" href="../paginas/pedidos.html">VER PEDIDOS</a>
         </div>
     </header>
     <section class="titulo">
