--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -21,8 +21,8 @@
             <a href="../index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
         <div class="nav-menu">
-            <a id="botonProductos" class="boton-nav">SEGUIR COMPRANDO</a>
-            <a id="botonCarrito" class="boton-nav">VER CARRITO</a>
+            <a class="boton-nav" href="../index.html">SEGUIR COMPRANDO</a>
+            <a class="boton-nav" href="../paginas/carrito.html">VER CARRITO</a>
         </div>
     </header>
     <section class="titulo">
