--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a href="index.html"><h1>Pastas Trivelli's</h1></a>       
         </div>
         <div class="nav-menu">
-            <a class="boton-nav" href="/paginas/carrito.html">VER CARRITO</a>
-            <a class="boton-nav" href="/paginas/pedidos.html">VER PEDIDOS</a>
+            <a class="boton-nav" href="paginas/carrito.html">VER CARRITO</a>
+            <a class="boton-nav" href="paginas/pedidos.html">VER PEDIDOS</a>
         </div>
     </header>
     <section class="titulo">
